Fri Aug  3 19:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/IDL_Cubit/run_test.pl:
          Removed references to lite protocols

Fri Aug  3 18:46:13 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MC_Default_Factory.h:
        * orbsvcs/orbsvcs/Notify/RT_Factory.h:

          Changed to check for Borland <= 0x590 instead of all versions of
          Borland compilers.

Fri Aug  3 12:44:51 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/CosNotification.mpc:
        * orbsvcs/orbsvcs/Makefile.am:

          Fixed an issue where the destination directory for the idl
          generated files does not exist (for automake only).

        * orbsvcs/examples/Notify/MC/monitor/monitor.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/NotificationServiceMonitor_i.cpp:

          Fixed build warnings about conversion from size_t to CORBA::Ulong.

Fri Aug  3 08:56:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Single_Threaded_POA/run_test.pl:
          Extended the timeout

        * POA/Single_Threaded_POA/Single_Threaded_POA.cpp:
          Layout changes

Thu Aug  2 19:30:30 UTC 2007  Dale Wilson  <wilsond@ociweb.com>

        * tao/Transport_Connector.cpp:
          remove_reference call was disabled for testing. Put it back in.

Thu Aug  2 14:24:11 UTC 2007  Dale Wilson  <wilsond@ociweb.com>

        * tao/Strategies/SCIOP_Connector.cpp:
          Provide correct arguments to wait_for_connection_completion.

Thu Aug  2 14:07:01 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
          Made so that TAO_Naming_Server uses ACE_DEFAULT_MULTICASTV6_ADDR
          in IPv6 builds.

        * orbsvcs/tests/Simple_Naming/run_test_ipv6.pl:
        * orbsvcs/tests/Simple_Naming/run_test.pl:
          Updated this test so that in IPv4 builds it uses strictly IPv4